# NirmatAI_SDK

./: .gitignore  .pre-commit-config.yaml  Dockerfile.client  Dockerfile.dev  Jenkinsfile  Makefile  README.md  check_functions.yml  create_pod_and_run_containers.yml  deploy.yml  pyproject.toml
.forgejo/workflows/: demo.yaml  static_tests.yml
.forgejo/workflows/actions/install_dependencies/: action.yml
.github/: dependabot.yml  handling-issues.yml
.github/workflows/: build_docker.yml  ci.yml  handling-issues.yml  static_tests.yml
.github/workflows/actions/install_dependencies/: action.yml
NirmatAI/: __init__.py  core.py  telemetry.py
docs/: README.md  api`reference.md  faq.md  user_guide.md
docs/source/: conf.py  dev.rst  index.rst
examples/: README.md
experiments/: exp_1.py
nirmatai_sdk/: __init__.py  core.py  telemetry.py
nirmatai_sdk/tests/: test_core_integration.py  test_core_unit.py  test_telemetry_unit.py
tests/: __init__.py  test_core_integration.py  test_core_unit.py  test_telemetry_unit.py
